omni/tests/goldens/types/unknown_type_12.err
tests/goldens/types/unknown_type_12.omni:1:13: error: unknown type "Mystery12"
  let value12:Mystery12 = 1
              ^~~ hint: import or declare the type before use
tests/goldens/types/unknown_type_12.omni:1:1: error: cannot assign int to Mystery12
  let value12:Mystery12 = 1
  ^~~ hint: adjust the expression or type annotation
